@@ -2392,6 +2392,7 @@ scripts_gotmod=.. PHP module $1 is now available.
 scripts_needpear=Installing PHP Pear module $1 ..
 scripts_einstallpear=Pear module is not available even after installation!
 scripts_gotpear=.. installation complete.
+scripts_eclash=Another script is already installed in $1.
 
 newnotify_title=Email Server Owners
 newnotify_desc=This page can be used to send email to the owners of the selected virtual servers, for example to announce system down-time, upgrades or other service alterations.
